/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * These .proto interfaces are private and stable.
 * Please see http://wiki.apache.org/hadoop/Compatibility
 * for what changes are allowed for a *stable* .proto interface.
 */

// This file contains protocol buffers that are used throughout HDFS -- i.e.
// by the client, server, and data transfer protocols.

option java_package = "org.apache.hadoop.hoya.api";
option java_outer_classname = "HoyaRPCProtocolProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package org.apache.hadoop.hoya.api;

//import "Security.proto";


/**
 * stop the cluster
 */
message StopClusterRequestProto {
  /**
  message to include
  */
  required string message = 1;
}
/**
 * stop the cluster
 */
message StopClusterResponseProto {
}

/**
 * flex the cluster
 */
message FlexClusterRequestProto {
  required string clusterSpec = 1;
}


/**
 * stop the cluster
 */
message FlexClusterResponseProto {
  required bool response = 1;
}



/**
 * void request
 */
message getJsonClusterStatusRequestProto {
}

/**
 * response
 */
message getJsonClusterStatusResponseProto {
  required string clusterSpec = 1;

}

/**
 * list the nodes in a role
 */
message ListNodeUUIDsByRoleRequestProto {
  required string role = 1;
}


/**
 * list the nodes in a role
 */
message ListNodeUUIDsByRoleResponseProto {
  repeated string uuid = 1 ;
}


/**
 * get a node
 */
message GetNodeRequestProto {
  required string uuid = 1;
}


/**
 * response on a node
 */
message GetNodeResponseProto {
   required string clusterNode = 1 ;
}



/**
 * list the nodes for the UUDs
 */
message GetClusterNodesRequestProto {
  repeated string uuid = 1 ;
}


/**
 * list the nodes in a role
 */
message GetClusterNodesResponseProto {
  repeated string clusterNode = 1 ;
}



/**
 * Protocol used from between Hoya Client and AM
 */
service HoyaRPCProtocolService {

  /**
   * Stop the cluster
   */

  rpc stopCluster(StopClusterRequestProto) 
    returns(StopClusterResponseProto);
    
  /**
   * Flex the cluster. 
   */
  rpc flexCluster(FlexClusterRequestProto) 
    returns(FlexClusterResponseProto);

  /**
   * Get the current cluster status
   */
  rpc getJSONClusterStatus(getJsonClusterStatusRequestProto)
    returns(getJsonClusterStatusResponseProto);

  /**
   * List all running nodes in a role
   */
  rpc listNodeUUIDsByRole(ListNodeUUIDsByRoleRequestProto)
    returns(ListNodeUUIDsByRoleResponseProto);

  /**
   * Get the details on a node
   */
  rpc getNode(GetNodeRequestProto)
    returns(GetNodeResponseProto);

  /**
   * Get the 
   * details on a list of nodes.
   * Unknown nodes are not returned
   * <i>Important: the order of the results are undefined</i>
   */
  rpc getClusterNodes(GetClusterNodesRequestProto)
    returns(GetClusterNodesResponseProto);
}
